--- a/server/routes/CreateUser.html
+++ b/server/routes/CreateUser.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<form action="/create_user" method="post">
+<form action="/api/create_user" method="post">
     <div>
         <label>Username:</label>
         <input type="text" name="username"/>
