--- a/server/routes/Login.html
+++ b/server/routes/Login.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<form action="/login" method="post">
+<form action="/api/login" method="post">
     <div>
         <label>Username:</label>
         <input type="text" name="username"/>
