All get requests changed to pper case

--- a/server/static/html/api.html
+++ b/server/static/html/api.html
@@ -45,7 +45,7 @@
             </code>
             <p>Getting all artists that contains the given parameter:</p>
             <code>
-                get /api/get_artists/searchstring
+                GET /api/get_artists/searchstring
             </code>
             <table>
                 <tr>
@@ -66,7 +66,7 @@
             </code>
             <p>Getting all albums that contains the given parameter:</p>
             <code>
-                get /api/get_albums/searchstring
+                GET /api/get_albums/searchstring
             </code>
             <table>
                 <tr>
@@ -87,7 +87,7 @@
             </code>
             <p>Getting all songs that contains the given parameter:</p>
             <code>
-                get /api/get_songs/searchstring
+                GET /api/get_songs/searchstring
             </code>
             <table>
                 <tr>
