--- a/server/static/html/api.html
+++ b/server/static/html/api.html
@@ -41,11 +41,11 @@
             <h2>Artists</h2>
             <p>Getting all the artists in the database: </p>
             <code>
-                GET /api/get_all_artists
+                GET /api/artists
             </code>
-            <p>Getting all artists that contains the given parameter:</p>
+            <p>Getting all artists with names that contain the given parameter:</p>
             <code>
-                GET /api/get_artists/searchstring
+                GET /api/artists/parameter
             </code>
             <table>
                 <tr>
@@ -62,11 +62,11 @@
             <h2>Albums</h2>
             <p>Getting all the albums in the database: </p>
             <code>
-                GET /api/get_all_albums
+                GET /api/albums
             </code>
-            <p>Getting all albums that contains the given parameter:</p>
+            <p>Getting all albums with names that contain the given parameter:</p>
             <code>
-                GET /api/get_albums/searchstring
+                GET /api/albums/parameter
             </code>
             <table>
                 <tr>
@@ -83,7 +83,7 @@
             <h2>Songs</h2>
             <p>Getting all the songs in the database: </p>
             <code>
-                GET /api/get_all_songs
+                GET /api/songs
             </code>
             <p>Getting all songs that contains the given parameter:</p>
             <code>
