--- a/website/server/static/html/api.html
+++ b/website/server/static/html/api.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
     <title>Sound API</title>
-    <link rel="stylesheet" type="text/css" href="../css/style.css">
+    <link rel="stylesheet" type="text/css" href="./../css/style.css">
 </head>
 <html>
     <body>
